--- a/backend/package.json
+++ b/backend/package.json
@@ -18,12 +18,14 @@
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "nodemailer": "^7.0.12"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
+    "@types/nodemailer": "^7.0.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
