--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "@uiw/react-color": "^2.9.2",
+    "color-name-list": "^14.15.1",
+    "nearest-color": "^0.4.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.11.0",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/nearest-color": "^0.4.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
