--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "rootDir": "src",
+    "rootDir": "../",
     "outDir": "dist",
 
     "strict": true,
@@ -13,5 +13,5 @@
 
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src"]
+  "include": ["../"]
 }
